# kolli-dashboard

./: .env.template  CHANGELOG.md  LICENSE  README.md  filter_emails.py  kolli_dashboard.service  pyproject.toml  scripts.py
kolli_dashboard/: ai_llm.py  app.py  control_group.py  data.py  info_popup.py  infobox.py  learning_room.py  others.py  round1.py  round2.py  round3.py  sidebar.py  students.py  students1.py  teachers.py  utils.py
kolli_dashboard/data/: .~lock.data.csv#  data.csv  labels.csv
kolli_dashboard/old/: students.py
kolli_dashboard/surveys/: revised.py  round1.py  round3.py  special.py
kolli_dashboard/www/: style.css
